# gnn

./: .gitignore  AGENTS.md  README.md  pyproject.toml
apsgnn/: __init__.py  buffer.py  config.py  ddp_utils.py  eval.py  growth.py  model.py  node.py  probes.py  routing.py  tasks.py  train.py  utils.py
configs/: main.yaml  no_cache.yaml  smoke.yaml  throughput_1gpu.yaml  throughput_4gpu.yaml  v10_transfer_h1_utility_querygrad_longplus.yaml  v10_transfer_h1_utility_querygrad_mutate_longplus.yaml  v10_transfer_h1_utility_querymix_longplus.yaml  v10_transfer_h1_utility_querymix_mutate_longplus.yaml  v10_utility_querygrad_longplus.yaml  v10_utility_querygrad_mutate_longplus.yaml  v10_utility_querymix_longplus.yaml  v10_utility_querymix_mutate_longplus.yaml  v11_transfer_h1_utility_querygrad_condmut_longplus.yaml  v11_utility_querygrad_condmut_longplus.yaml  v12_transfer_h1_utility_querygrad_adaptmut_longplus.yaml  v12_utility_querygrad_adaptmut_longplus.yaml  v13_transfer_h1_utility_querygrad_hiconf_longplus.yaml  v13_utility_querygrad_hiconf_longplus.yaml  v14_transfer_h1_utility_querygrad_agree_longplus.yaml  v14_utility_querygrad_agree_longplus.yaml  v15_transfer_h1_utility_querygrad_stagnate_longplus.yaml  v15_utility_querygrad_stagnate_longplus.yaml  v16_transfer_h1_clone_selective_longplus.yaml  v16_transfer_h1_staged_static_longplus.yaml  v17_transfer_h1_utility_querygradonly_longplus.yaml  v17_transfer_h1_utility_visitonly_longplus.yaml  v17_utility_querygradonly_longplus.yaml  v17_utility_visitonly_longplus.yaml  v18_core_querygrad_long.yaml  (+3482 more)
(+4154 files in other folders)
